# rank-analysis

.github/workflows/: auto-build.yml  build.yml
.github/workflows/.github/workflows/: build.yml
.github/workflows/auto-build-new.yml/: champ-build.yml
.github/workflows/build-with-champ.yml/: build-with-champ.yml
docs/superpowers/specs/: 2026-05-01-pickban-rules-and-ai-tags-design.md  2026-05-03-player-card-tag-layout-design.md
lol-record-analysis-tauri/: package-lock.json  package.json
lol-record-analysis-tauri/src/: App.vue
lol-record-analysis-tauri/src-tauri/: Cargo.toml  tauri.conf.json
lol-record-analysis-tauri/src-tauri/src/: automation.rs  command.rs  lib.rs  main.rs  rule_engine.rs
lol-record-analysis-tauri/src-tauri/src/command/: rule_config.rs
lol-record-analysis-tauri/src-tauri/src/lcu/api/: champion_select.rs
lol-record-analysis-tauri/src/components/automation/: RuleConditionRow.vue  RuleEditModal.vue
lol-record-analysis-tauri/src/components/automation/__tests__/: RuleEditModal.spec.ts
lol-record-analysis-tauri/src/components/gaming/: PlayerCard.vue
lol-record-analysis-tauri/src/components/tags/: AISuggestModal.vue
lol-record-analysis-tauri/src/components/tags/__tests__/: AISuggestModal.spec.ts
lol-record-analysis-tauri/src/composables/: useRules.ts
lol-record-analysis-tauri/src/services/ai/tagSuggest/: featureExtract.ts  index.ts  prompt.ts  validator.ts
lol-record-analysis-tauri/src/services/ai/tagSuggest/__tests__/: featureExtract.spec.ts  (+3 more)
lol-record-analysis-tauri/src/types/: rules.ts  tagSuggest.ts
lol-record-analysis-tauri/src/views/settings/: Automation.vue  Tags.vue
