[package]
name = "lol-record-analysis-app"
authors = ["wnzzer"]
edition = "2021"

[lib]
name = "lol_record_analysis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
opt-level = "z"   # 优化级别设为 "z"，专注于大小优化
lto = true        # 启用链接时优化
codegen-units = 1 # 减少代码生成单元，提高优化效果
panic = "abort"   # 恐慌时直接中止，减少错误处理代码
strip = true      # 剥离符号信息，减小二进制大小

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1.10.3"
reqwest = { version = "0.11", features = [
    "json",
    "stream",
] }
winapi = { version = "0.3.9", features = [
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "psapi",
    "winbase",
    "minwindef",
    "ntdef",
    "libloaderapi",
    "memoryapi",
    "winnt",
] }
log = "0.4.0"
env_logger = "0.9"
base64 = "0.21"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
moka = { version = "0.12", features = ["future"] }
phf = { version = "0.12", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1.3"
tauri-plugin-updater = "2.9.0"
mlua = { version = "0.9", features = ["lua54", "vendored", "async"] }
futures = "0.3"
tokio-tungstenite = { version = "0.20", features = [
    "native-tls",
    "connect",
    "handshake",
] }
futures-util = "0.3"
native-tls = "0.2"
tokio-native-tls = "0.3"
url = "2.5"
tauri-plugin-shell = "2"
